--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,10 @@
 name: Release
 
 on:
-    workflow_dispatch:
-    push:
-        tags:
-            - 'v*'
-        # branches:
-        #     - 'main'
+  push:
+    branches:
+      - 'AlarmCenter'
+        
 
 jobs:
     publish-tauri:
